--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -17,7 +17,7 @@
 <section>
 <pre class="pre-scrollable-large">
 <% if @visit.pat_type == HCP_PATIENT %>
-<b>OHIP Visit HC# </b>: <%= @visit.hin_num %> 
+<b>OHIP Visit HC# </b>: <%= @visit.hin_num %>  <b> Billing Type: </b> <%= @visit.pat_type %>
 <% elsif @visit.pat_type == IFH_PATIENT %>   
 <b>IFH Visit Card# </b>: <%= @visit.hin_num %> 
 <% else %>
