--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -10,7 +10,7 @@
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
-	  <th class="tbl_sm"><%= sortable 'entry_ts', 'Time' %></th>
+	  <th class="tbl_lsm"><%= sortable 'entry_ts', 'Time' %></th>
 	  <% if date.today? %>
 	  <th class="tbl_sm">Room</th>
  	  <% end %>
@@ -38,7 +38,7 @@
           <th class="tbl_lsm">Diag.</th>
           <th class="tbl_md">Services</th>
 	  <% if device_is_desktop? %>
-          <th class="tbl_md">Status</th>
+          <th class="tbl_sm">Status</th>
 	  <% end %>
 	  <th class="tbl_sm"></th> 
 	  <th class="tbl_sm"></th> 
