--- a/app/views/doctors/_doctor.html.erb
+++ b/app/views/doctors/_doctor.html.erb
@@ -11,6 +11,7 @@
 	<td><%= doctor.cpso_num %> </td> 
 	<td><%= doctor.wsib_num %> </td> 
 	<td><%= doctor.bills_str %> </td> 
+	<td><%= doctor.billing_format_str %> </td> 
 	<td><%= doctor.address %> </td> 
 	<td><%= doctor.city %> </td> 
 	<td><%= doctor.phone %> </td> 
