--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -12,10 +12,10 @@
           <th>CPSO#</th>
 	  <th>WSIB#</th>
           <th class='tbl_sm'>Bills?</th>
+          <th>Bil.Fmt</th>
 	  <th class='tbl_lg'> Address</th>
           <th class='tbl_md'>City</th>
           <th>Phone </th>
-          <th>New Pat? </th>
 	  <th class='tbl_sm'> </th>
 	  <% if  current_user.admin?  %>
 	      <th class='tbl_sm'> </th>
